--- a/Deposito/src/index.html
+++ b/Deposito/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <img src="" alt="">
     <title>Sistema Depósito</title>
-    <base href="./">
+    <base href="/">
     <link rel="icon" type="image/x-icon" href="./assets/img/logocom.png" />
     <link rel="stylesheet" type="text/css" href="./assets/bootstrap.min.css" />
 
