--- a/Deposito/src/index.html
+++ b/Deposito/src/index.html
@@ -6,8 +6,13 @@
     <title>Sistema Depósito</title>
     <base href="/" />
     <link rel="icon" type="image/x-icon" href="./assets/img/logocom.png" />
-    <link rel="stylesheet" type="text/css" href="./assets/bootstrap.min.css" />
-
+    <link rel="stylesheet" href="./assets/bootstrap.min.css" />
+    <!-- <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    /> -->
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.1.1/js/all.js"
@@ -17,18 +22,17 @@
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <!-- jQuery CDN - Slim version (=without AJAX) -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
     ></script>
-    <!-- Popper.JS -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
       integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
       crossorigin="anonymous"
     ></script>
-    <!-- Bootstrap JS -->
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
@@ -39,18 +43,5 @@
   <body id="page-top" class="mat-typography">
     <app-root></app-root>
     <!-- Bootstrap core JavaScript -->
-    <script src="assets/vendor/jquery/jquery.min.js"></script>
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Plugin JavaScript -->
-    <script src="assets/vendor/jquery-easing/jquery.easing.min.js"></script>
-
-    <!-- Contact Form JavaScript -->
-    <script src="assets/js/jqBootstrapValidation.js"></script>
-    <script src="assets/js/contact_me.js"></script>
-    <script src="assets/js/funcionModal.js"></script>
-
-    <!-- Custom scripts for this template -->
-    <script src="assets/js/freelancer.min.js"></script>
   </body>
 </html>
